[metadata]
name = acvsfit
version = 0.3.2
author = Jan Tünnermann
author_email = jan.tuennermann@uni-marburg.de
description = Foraging file format and tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jt-lab/acvsfit
project_urls =
Bug Tracker = https://github.com/jt-lab/acvsfit/issues
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

install_requires =
    pymc >= 5.25.0
    arviz >= 0.12.1
    seaborn >= 0.12.0
    tqdm

[options.packages.find]
where = src

[options.package_data]
* = *.csv
